<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:gravity="center"
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/setting_toolBar"
        android:textColor="@color/white"
        android:background="@color/setting_toolbar_bg"
        android:textSize="15sp" />

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_readConfig"
                android:textColor="@color/setting_textprimary" />

            <RelativeLayout
                android:id="@+id/rl_reset_screen"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/setting_common_bg"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_fontSize"
                    android:textColor="@color/setting_textsecondary"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/sp_setFontSize"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:dropDownWidth="90dp"
                    android:entries="@array/size_array"
                    android:gravity="center" />

            </RelativeLayout>

<!--            <RelativeLayout-->
<!--                android:id="@+id/rl_show_music"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@color/setting_common_bg"-->
<!--                android:gravity="center"-->
<!--                android:paddingLeft="20dp"-->
<!--                android:paddingRight="20dp">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:text="@string/setting_musicStatus"-->
<!--                    android:textColor="@color/setting_textsecondary"-->
<!--                    android:textSize="15sp" />-->

<!--                <androidx.appcompat.widget.SwitchCompat-->
<!--                    android:id="@+id/sc_music_switch"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:clickable="true"-->
<!--                    android:longClickable="false" />-->

<!--            </RelativeLayout>-->

            <RelativeLayout
                android:id="@+id/rl_show_night"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/setting_common_bg"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting_nightStatus"
                    android:textColor="@color/setting_textsecondary"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_night_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:longClickable="false" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_swipe_mode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/setting_common_bg"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="上滑"
                    android:textColor="@color/setting_textsecondary"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sc_swipe_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:longClickable="false" />

            </RelativeLayout>

            <!--          其他设置              -->
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/setting_otherConfig"
                android:textColor="@color/setting_textprimary" />

            <Button
                android:id="@+id/bt_bookmark"
                android:paddingLeft="20dp"
                android:gravity="center_vertical | left"
                android:text="我的书签"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:drawableRight="@drawable/setting_right"
                android:background="@color/setting_common_bg"/>

            <Button
                android:id="@+id/bt_collection"
                android:paddingLeft="20dp"
                android:gravity="center_vertical | left"
                android:text="我的收藏"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:drawableRight="@drawable/setting_right"
                android:background="@color/setting_common_bg"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>